<resources>
    <string name="app_name">Agora Marketplace</string>
    <string name="app_welcome">Bienvenido a Agora MarketPlace</string>
    <string name="app_login_description">Inicia sesión y conoce todos los artículos que los emprendedores de tu ciudad ofrecen</string>
    <string name="app_login_register">Regístrate aquí</string>
    <string name="app_register_description">Regístrate como emprendedor o cliente y conoce todas las novedades que AgoraMarketPlace trae para ti.</string>

    <!--Menu general-->
    <string name="menu_home">Inicio</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_estadistica">Estadisticas</string>

    <!--Menu del home-->
    <string name="btn_vegetales">Vegetales</string>
    <string name="btn_frutas">Frutas</string>
    <string name="btn_granos">Granos</string>
    <string name="btn_otros">Otros</string>

    <!--Material AlertDialog-->
    <string name="alert_cancelar">Cancelar</string>
    <string name="alert_denegar">Denegar</string>
    <string name="alert_aceptar">Aceptar</string>

    <string name="title_comprar">Compra exitosa</string>
    <string name="message_comprar">Hemos enviado tu pedido al vendedor, pronto te escribirá al chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_registro_cliente">Registro de cliente</string>
    <string name="txt_registro_empresa">Registro de emprendedor</string>

    <string name="btn_registrarse">Registrarse</string>

    <string name="txt_subir_foto_perfil">Suba una foto de perfil</string>

    <string name="hint_nombres">Nombres *</string>
    <string name="hint_apellidos">Apellidos *</string>
    <string name="hint_cedula">Cédula de identidad *</string>
    <string name="hint_ciudad">Ciudad *</string>
    <string name="hint_direccion">Dirección de domicilio *</string>
    <string name="hint_celular">Celular o teléfono *</string>
    <string name="hint_correo">Correo electrónico *</string>
    <string name="hint_contrasena">Contraseña *</string>
    <string name="hint_foto_perfil">Foto de perfil</string>
    <string name="hint_ruc">RUC (opcional)</string>
    <string name="hint_nombre_empresa">Nombre de la empresa *</string>
    <string name="hint_slogan">Slogan *</string>
    <string name="hint_costo_envio">Costo de envío *</string>

    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="dialog_denegar">Denegar</string>


    <string-array name="spinner_filtros_cliente">
        <item>Recientes</item>
        <item>Antiguos</item>
        <item>Más barato</item>
        <item>Más caro</item>
        <item>Ordenar AZ</item>
        <item>Ordenar ZA</item>
    </string-array>

    <string-array name="spinner_unidades_de_medidas">
        <item>unidad (u)</item>
        <item>libra (lb)</item>
        <item>gramo (g)</item>
        <item>kilogramo (kg)</item>
        <item>litro (l)</item>
        <item>mililitro (ml)</item>
        <item>metro (m)</item>
        <item>centímetro (cm)</item>
    </string-array>

    <string-array name="spinner_periodo">
        <item>Mes actual</item>
        <item>Año actual</item>
    </string-array>

    <string-array name="spinner_grafica">
        <item>Lineal</item>
        <item>Barra</item>
        <item>Pastel</item>
    </string-array>
</resources>