<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/action_chats"
        android:title="@string/menu_chats"
        android:icon="@drawable/ic_chats"/>
    <item
        android:id="@+id/action_shopcar"
        android:title="@string/menu_carrito"
        android:icon="@drawable/ic_shopcar"/>
    <item
        android:id="@+id/action_likes"
        android:title="@string/menu_favoritos"
        android:icon="@drawable/ic_likes"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/menu_cuenta"
        android:icon="@drawable/ic_account"/>
</menu>