<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dpPddHome"
        tools:context=".business.activitys.EditUserAccount">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMrgBottomInputs"
            android:gravity="center_horizontal"
            android:text="Configuración de usuario"
            android:textSize="@dimen/spNivel2"
            android:fontFamily="@font/roboto_bold"/>
        <EditText
            android:id="@+id/actConfUser_txtNombres"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombres"
            android:maxLength="@integer/max_digist_nombres"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/actConfUser_txtApellidos"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellidos"
            android:maxLength="@integer/max_digist_apellidos"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/actConfUser_txtCorreo"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            android:maxLength="@integer/max_digist_correo"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/actConfUser_txtContrasena"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contrasena"
            android:maxLength="@integer/max_digist_contrasena"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/actConfUser_txtCedula"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cedula"
            android:maxLength="@integer/max_digist_cedula"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/actConfUser_txtRUC"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ruc"
            android:maxLength="@integer/max_digist_ruc"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/actConfUser_txtCiudad"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ciudad"
            android:maxLength="@integer/max_digist_nombres"
            android:inputType="text"/>
        <EditText
            android:id="@+id/actConfUser_txtDireccion"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            android:maxLength="@integer/max_digist_direccion"
            android:inputType="text"/>
        <EditText
            android:id="@+id/actConfUser_txtCelular"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_celular"
            android:maxLength="@integer/max_digist_celular"
            android:inputType="phone"/>

        <Button
            android:id="@+id/actConfUser_btnRegistrar"
            style="@style/style_btn_blue"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMrgBottomInputs"
            android:text="@string/btn_registrarse"
            android:onClick="clicBtnActualizarDatosusuario"/>

        <Button
            android:id="@+id/actConfUser_btnCancelar"
            style="@style/style_btn_gris"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_cancelar"
            android:onClick="clicBtnCancelarActualizacion"/>

    </LinearLayout>

</ScrollView>