<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.RegisterClient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMrgBottomTitle"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/frgRegClient_btnIrAtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_atras"
                android:onClick="clicRegresarOpcDeRegistro"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_registro_cliente"
                android:textSize="@dimen/spNivel2"
                android:fontFamily="@font/roboto_bold"/>
        </LinearLayout>

        <EditText
            android:id="@+id/frgRegClient_txtNombres"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombres"
            android:maxLength="@integer/max_digist_nombres"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/frgRegClient_txtApellidos"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellidos"
            android:maxLength="@integer/max_digist_apellidos"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/frgRegClient_txtCorreo"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            android:maxLength="@integer/max_digist_correo"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/frgRegClient_txtContrasena"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contrasena"
            android:maxLength="@integer/max_digist_contrasena"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/frgRegClient_txtCedula"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cedula"
            android:maxLength="@integer/max_digist_cedula"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/frgRegClient_txtCiudad"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ciudad"
            android:maxLength="@integer/max_digist_nombres"
            android:inputType="text"/>
        <EditText
            android:id="@+id/frgRegClient_txtDireccion"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            android:maxLength="@integer/max_digist_direccion"
            android:inputType="text"/>
        <EditText
            android:id="@+id/frgRegClient_txtCelular"
            style="@style/style_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_celular"
            android:maxLength="@integer/max_digist_celular"
            android:inputType="phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dpMrgBottomInputs"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frgRegClient_btnSubirImagen"
                style="@style/style_btn_optregister_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_foto_perfil"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_camera"
                app:iconTint="@color/app_button"
                android:onClick="cargarFotoClient"/>
            <TextView
                android:id="@+id/frgRegClient_txtNombreDeLaImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dpMrgGeneral"
                android:text="@string/txt_subir_foto_perfil"/>
        </LinearLayout>

        <Button
            android:id="@+id/frgRegClient_btnRegistrar"
            style="@style/style_btn_blue"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrarse"
            android:onClick="clicRegistrarCliente"/>

    </LinearLayout>
</ScrollView>