<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HeaderFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/shape_rectangle_corners"
        android:elevation="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_vegetales"
            android:textAllCaps="false"
            android:textColor="@color/app_font"
            android:textSize="@dimen/spNivel0"
            android:background="@drawable/shape_button_header_lef"
            app:backgroundTint="@null"
            android:elevation="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_frutas"
            android:textAllCaps="false"
            android:textSize="@dimen/spNivel0"
            android:textColor="@color/app_font"
            android:background="@color/app_button_white"
            app:backgroundTint="@null"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_granos"
            android:textAllCaps="false"
            android:textSize="@dimen/spNivel0"
            android:textColor="@color/app_font"
            android:background="@color/app_button_white"
            app:backgroundTint="@null"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_header_right"
            android:text="@string/btn_otros"
            android:textAllCaps="false"
            android:textColor="@color/app_font"
            android:textSize="@dimen/spNivel0"
            app:backgroundTint="@null"/>

    </LinearLayout>

</FrameLayout>